# CPPython

./: .gitignore  pyproject.toml
.github/workflows/: python-check.yml  python-merge.yml  python-publish.yml
cppython/: builder.py  project.py
cppython/core/: resolution.py  schema.py
cppython/plugins/cmake/: plugin.py  resolution.py  schema.py
cppython/plugins/conan/: plugin.py  resolution.py  schema.py
cppython/plugins/vcpkg/: plugin.py  resolution.py  schema.py
cppython/test/: schema.py
cppython/test/data/: variants.py
cppython/test/pytest/: fixtures.py  shared.py
docs/: antora.yml
docs/modules/ROOT/pages/: index.adoc
docs/modules/tests/: nav.adoc
docs/modules/tests/pages/: fixtures.adoc
tests/: conftest.py
tests/fixtures/: cmake.py
tests/integration/plugins/cmake/: test_generator.py
tests/unit/: test_project.py
tests/unit/core/: test_resolution.py
tests/unit/plugins/cmake/: test_generator.py
tests/unit/utility/: test_utility.py
